<resources>
    <string name="app_name">Project</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_minu">minu</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_user_ui">UserUI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_goods">Goods</string>
    <string name="menu_fav">My Favorites</string>
    <string name="menu_cart">My Cart</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string-array name="spinner_types">
        <item>select type</item>
        <item>dairy</item>
        <item>fruit</item>
        <item>vegetable</item>
        <item>bakery</item>
        <item>vegan</item>
        <item>meat</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_contact">Contact us or Find us</string>
    <string name="title_activity_admin_ui">AdminUI</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_delete">Delete Customer</string>
    <string name="menu_add">Add Admin</string>
    <string name="menu_view">View Castomers</string>
</resources>
