<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home_96px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_goods"
            android:icon="@drawable/icons8_open_box_96px"
            android:title="@string/menu_goods" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/icons8_star_filled_96px"
            android:title="@string/menu_fav" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/icons8_buying_96px"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/icons8_sale_96px_2"
            android:title="@string/menu_sale" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/icons8_contact_96px"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/icons8_online_support_96px"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icons8_shutdown_96px"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
