<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icons8_home_96px"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_delete"
            android:icon="@drawable/icons8_denied_48px"
            android:title="@string/menu_delete" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/icons8_add_user_male_skin_type_7_48px"
            android:title="@string/menu_add" />
        <item
            android:id="@+id/nav_view"
            android:icon="@drawable/icons8_view_details_48px_1"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icons8_shutdown_96px"
            android:title="@string/menu_logout" />
    </group>

</menu>
