<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.UIFragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_delete"
        android:name="com.example.project.UIFragments.delete.DeleteFragment"
        android:label="@string/menu_delete"
        tools:layout="@layout/fragment_delete" />

    <fragment
        android:id="@+id/nav_add"
        android:name="com.example.project.UIFragments.add.AddFragment"
        android:label="@string/menu_add"
        tools:layout="@layout/fragment_add" />

    <fragment
        android:id="@+id/nav_view"
        android:name="com.example.project.UIFragments.customers.CustomersFragment"
        android:label="@string/menu_view"
        tools:layout="@layout/fragment_showcustomers" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.project.UIFragments.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

</navigation>